# xwing_copilot

./: .gitignore  LICENSE  README.rst  pyproject.toml  readme.rst  setup.cfg  tox.ini
requirements/: requirements-build.txt  requirements-dev.txt
src/xwing_copilot/: main.py
