[metadata]
name = X-Wing Copilot
version = 0.0.1
description = Companion app to X-Wing
author = Patrick Harrison
author_email = patrickgharrison@outlook.com
license = MIT
license_files = LICENSE

[options]
packages =
    xwing_copilot
package_dir =
    =src
zip_safe = no
python_requires = >=3.10

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
xwing_copilot = py.typed

[flake8]
max-line-length = 80


